# sst2k

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.old  MAKEFILE.DOS  MAKEFILE.OS2  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  ai.c  autogen.sh  battle.c  configure  configure.ac  conio.c  conio.h  control  events.c  finish.c  io.c  linux.c  makefile  makehelp.py  moving.c  os2.c  planets.c  replay  reports.c  setup.c  sst-doc.xml  sst.c  sst.doc  sst.h  sst.py  sst.spec  (+4 more)
c-version/: ChangeLog  README  configure.ac
c-version/m4/: ChangeLog
c-version/src/: Makefile.am  battle.c  finish.c  moving.c  planets.c
doc/: ChangeLog.old  HACKING  Makefile  Makefile.am  Makefile.in  doc_rus.txt  makehelp.py  sst-doc.xml  sst-layer.xsl  sst.xml
historic/: README  UT-Trek.basic
historic/c-version/: AUTHORS  Makefile.am  configure.ac
historic/c-version/src/: ai.c  battle.c  events.c  finish.c  io.c  moving.c  planets.c  reports.c  setup.c  sst.c  sst.h  sstlinux.c  sstlinux.h
po/: ChangeLog  Makefile  Makefile.in  POTFILES.in  ru.po
src/: Makefile.am  Makefile.in  ai.c  battle.c  config.h.in  events.c  finish.c  io.c  moving.c  planets.c  replay  reports.c  setup.c  sst.c  sst.h  sst.py  sstlinux.c  sstlinux.h  xio.c
test/: Makefile  README  test1.chk  test2.chk  test3.chk  test4.chk  test5.chk  test6.chk  test7.chk  test8.chk
www/: index.html  upload
